<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">JustJava</string>
    <string name="email">rajtheinnovatorabhishek@gmail.com</string>
    <string name="subject">Order for Coffee</string>
    <string name="order">Order</string>
    <string name="initial_quantity_value">1</string>
    <string name="quantity">Quantity</string>
    <string name="chocolate">Chocolate</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="toppings">Toppings</string>
    <string name="name">Name</string>

</resources>
