<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textCapWords" />
    <TextView
        style="@style/HeaderTextStyle"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/toppings" />
    <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingLeft="24dp"
        android:text="@string/whipped_cream"
        android:textSize="16sp" />
    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:text="@string/chocolate"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/quantity"
        style="@style/HeaderTextStyle"
        android:text="@string/quantity" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/minus"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:onClick="decrement"
            android:text="-" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toRightOf="@id/minus"
            android:text="@string/initial_quantity_value"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_toRightOf="@id/quantity_text_view"
            android:onClick="increment"
            android:text="+" />
    </RelativeLayout>

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="16dp"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:text="Order Summary"-->
    <!--android:textAllCaps="true"-->
    <!--android:textColor="@android:color/black"-->
    <!--android:textSize="16sp" />-->

    <!--<TextView-->
    <!--android:id="@+id/order_summary_text_view"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="16dp"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:text=""-->
    <!--android:textColor="@android:color/black"-->
    <!--android:textSize="12sp" />-->


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitOrder"
        android:text="@string/order"
        android:textAllCaps="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="seeMap"
        android:text="see Map"
        android:textAllCaps="true"/>

</LinearLayout>

